# plane-spotter

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
plane_spotter/: __main__.py  app.py  client.py  config.py  geometry.py  notifier.py  scheduler.py  tracker.py
plane_spotter/models/: __init__.py  aircraft.py  tracking.py
tests/: test_geometry.py  test_scheduler.py  test_tracker.py
