[project]
name = "plane-spotter"
version = "0.1.0"
description = "CLI app that alerts when low-altitude planes are likely to pass overhead"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
]

[project.scripts]
plane-spotter = "plane_spotter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
